<resources>
    <string name="app_name">Oil Collection</string>
    <string name="oil_collection_login">Oil Collection</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="update">Update</string>
    <string name="request_collection">Request Collection</string>
    <string name="book_collection">Book Collection</string>
    <string name="dashboard_collection_tittle">Click the button below to request an oil or fat collection</string>
    <string name="dashboard">Dashboard</string>
    <string name="please_wait">Please Wait</string>
    <string name="oil_drop">oil drop</string>
    <string name="user_email">Email:</string>
    <string name="user_email_hint">Email</string>
    <string name="user_password">Password</string>
    <string name="shop_name">Name:</string>
    <string name="shop_name_hint">Shop Name</string>
    <string name="address">Address:</string>
    <string name="shop_address">Shop Address</string>
    <string name="suburb">Suburb:</string>
    <string name="suburb_hint">Suburb</string>
    <string name="city">City:</string>
    <string name="city_hint">City</string>
    <string name="post_code">Post code:</string>
    <string name="post_code_hint">Post code</string>
    <string name="phone">Phone:</string>
    <string name="shop_phone_number">Shop phone number</string>
    <string name="contact_person">Contact person:</string>
    <string name="contact_person_hint">Contact person</string>
    <string name="mobile_number">Mobile number:</string>
    <string name="mobile_number_hint">Mobile number</string>
    <string name="bank_account_name">Bank account name:</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="bank_account_number">Bank account number:</string>
    <string name="bank_account_number_hint">Bank account number</string>
    <string name="password_form">Password:</string>
    <string name="confirm_password">Confirm Password:</string>

    <string name="nav_my_profile">My profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="image_content_description">Image</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>