<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dashboard"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/companyColor"
        android:theme="@style/CustomToolbarStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/nav_bar_title_size"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/text_padding_mid_screen"
            android:paddingStart="@dimen/text_padding_mid_screen"
            android:text="@string/dashboard_collection_tittle"
            android:textSize="@dimen/text_size_mid_screen"
            android:gravity="center"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/requestCollectionUpButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/request_collection"
            android:background="@drawable/button_bg"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookCollectionButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book_collection"
            android:background="@drawable/button_bg"/>

    </LinearLayout>

</LinearLayout>
